src/ToDo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: todoa-app-sa
      nodeSelector:
        kubernetes.io/os: linux
      containers:
        - name: todo-app
          image: farfocel.azurecr.io/todo/todo-app:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: '0'
              memory: '0'
            limits:
              cpu: '256'
              memory: 11400G
