src/ToDo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-service
  namespace: default
spec:
  type: ClusterIP
  ports:
    - targetPort: 8080
      name: port8080
      port: 8080
      protocol: TCP
  selector:
    app: todo-app
