src/ToDo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - host: "pull.team0.patoarchitekci.io"
    http:
      paths:
      - backend:
          service:
            name: todo-app-service
            port:
              number: 8080
        path: /
        pathType: Prefix
